# HandyOsc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
modules/: CMakeLists.txt
res/: CMakeLists.txt  gui.xml
res/presets/: Default.mypreset
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor.hpp
src/dsp/: BiquadFilter.cpp  BiquadFilter.hpp  BitReduction.cpp  BitReduction.hpp  CMakeLists.txt  ShaperProcessor.h  WaveWarp.hpp
src/gui/: CMakeLists.txt  Dial.cpp  Dial.h  EditableParameterComponent.cpp  EditableParameterComponent.h  MainComponent.cpp  MainComponent.h  MainLNF.cpp  MainLNF.h  MiscGroup.cpp  MiscGroup.h  TransientGroup.cpp  TransientGroup.h
src/gui/item/: DynText.hpp
src/gui/lnf/: MainLNF.cpp  MainLNF.hpp
